# tf-agents

./: .bedrock_agentcore.yaml  .gitignore  README.md  pyproject.toml
.kiro/steering/: implementation-guide.md
agents/supervisor/code/: .env.example  Dockerfile  agent.py  pyproject.toml
agents/supervisor/code/app/: __init__.py  config.py  exceptions.py  main.py  models.py  services.py  tools.py
agents/supervisor/code/tests/: agentcore_websocket_chat.py  diagnose_bottleneck.py  diagnose_bottleneck_http.py  invoke_remote_agent.py  simple_streaming_test.py  simple_websocket_test.py
agents/supervisor/terraform/: backend.tf  data.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars  variables.tf
shared/terraform/infrastructure/: README.md  backend.tf  knowledge-base.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars  variables.tf
shared/terraform/modules/agentcore-runtime/: maint.tf  outputs.tf  variables.tf
shared/terraform/modules/bedrock-knowledge-base/: main.tf  outputs.tf  variables.tf
shared/terraform/modules/codebuild/: buildspec.yml  main.tf  outputs.tf  variables.tf
shared/terraform/modules/ecr-repo/: main.tf  outputs.tf  variables.tf
shared/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
shared/terraform/modules/s3-upload/: main.tf  outputs.tf  variables.tf
shared/terraform/modules/s3-vector-store/: main.tf  outputs.tf  variables.tf
terraform/: bedrock_agentcore.tf  terraform.tfvars
